--- a/latex06/citations.bib
+++ b/latex06/citations.bib
@@ -19,3 +19,18 @@ abstract = {Indonesia is the largest country made only of islands, with previous
   publisher = {国連},
   pages     = {58}
 }
+@article{wallaceline,
+author = {Ali, Jason R. and Heaney, Lawrence R.},
+title = {Wallace's line, Wallacea, and associated divides and areas: history of a tortuous tangle of ideas and labels},
+journal = {Biological Reviews},
+volume = {96},
+number = {3},
+pages = {922-942},
+keywords = {Bali, birds, Indonesia, Lombok, mammals, Moluccas, Philippines, Sahul Shelf, Sulawesi, Sunda Shelf},
+doi = {https://doi.org/10.1111/brv.12683},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/brv.12683},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/brv.12683},
+abstract = {ABSTRACT Due to its position between the highly distinct Oriental and Australasian biogeographical realms, much effort has been spent demarcating associated separations and transitions in the faunal assemblages of the Indo-Australian Archipelago. Initially, sharp boundary lines were proposed, with the earliest dating from the mid-1800s. Notably, the one published by Alfred R. Wallace in 1863, based upon land-mammal and land-bird distributions, has since achieved iconic status and today its significance is recognized well beyond the confines of the biogeography community. Over the next four decades many such divides were engraved onto plates and inked onto charts of SE Asia using additional information, different organisms or other criteria. However, it became apparent that, as Wallace had noted, all such lines were to some degree permeable, and by the 1880s transition zones were being put forward instead; the label ‘Wallacea’ was introduced in 1924. Interestingly, the last decade has seen new divides and sub-regions being proposed, some departing markedly from earlier offerings. Although currently there is general agreement regarding much of the terminology associated with both the lines and the areas, the record of publication indicates that this consensus has emerged obliquely, and in some cases is weakly founded. This review does not present new data nor new analyses; rather it summarizes the development of ideas and reflects upon attendant issues that have emerged. After reviewing the key proposals, recommendations are presented that should in future alleviate perceived difficulties or inadequacies. Reference to specific divides must be true to their original definitions; there are many instances where the secondary literature has portrayed them incorrectly and with some this has rippled through into later publications. Moreover, Wallace's 1863 line is not the one that he finally settled upon (in 1910); its path around Sulawesi was transferred from the west to the east of the Island. Ideally, Huxley's divide (1868) should carry his name rather than Wallace's; the latter never accepted the proposition. Lydekker's Line (1896) ought to be labelled the Heilprin–Lydekker Line in recognition of Angelo Heilprin's 1887 contribution. Concerning transition zones, ideally Wallacea should correspond to its original 1924 description, which incorporated the Philippine islands bar the Palawan group. Notably, though, a smaller form (introduced by Darlington in 1957, used frequently from 1998 onwards) in which all of the Philippine islands are excluded is entrenched within the recent literature, but this is often without evident justification. It should also be recognized that the ‘reduced’ (=southern) Wallacea area was effectively defined by Heilprin in 1887, but was then labelled the ‘Austro-Malaysian Transition Zone’. Finally, the application in recent years of modern analytical techniques has not led to a consensus view on where the lines/areas should run/be placed; with such a large, diverse set of organisms, each with differing histories, this is perhaps not surprising.},
+year = {2021}
+}
+
