--- a/latex06/citations.bib
+++ b/latex06/citations.bib
@@ -34,3 +34,101 @@ abstract = {ABSTRACT Due to its position between the highly distinct Oriental an
 year = {2021}
 }
 
+@misc{penpres1965,
+  title        = {Penetapan Presiden Republik Indonesia Nomor 1 Tahun 1965 tentang Pencegahan Penyalahgunaan dan/atau Penodaan Agama},
+  author       = {{Presiden Republik Indonesia}},
+  year         = {1965},
+  note         = {Lembaran Negara Republik Indonesia No. 3 Tahun 1965, Tambahan Lembaran Negara No. 2726},
+  url          = {https://id.wikisource.org/wiki/Penetapan_Presiden_Republik_Indonesia_Nomor_1_Tahun_1965}
+}
+@misc{pew2024indonesia,
+  author       = {Pew Research Center},
+  title        = {5 facts about Muslims and Christians in Indonesia},
+  year         = {2024},
+  url          = {https://www.pewresearch.org/short-reads/2024/03/28/5-facts-about-muslims-and-christians-in-indonesia/},
+  note         = {Accessed: 2025-05-12},
+  institution  = {Pew Research Center}
+}
+
+@misc{philtar_indonesian_religions,
+  author       = {Elliott Shaw},
+  title        = {Indonesian Religions},
+  year         = {2016},
+  url          = {http://www.philtar.ac.uk/encyclopedia/indon/geness.html},
+  note         = {Accessed: 2025-05-12},
+  institution  = {PHILTAR: The Philtar Religion Database}
+}
+
+@book{taylor2003indonesia,
+  author    = {Jean Gelman Taylor},
+  title     = {Indonesia},
+  year      = {2003},
+  publisher = {Yale University Press},
+  address   = {New Haven and London},
+  isbn      = {978-0-300-10518-6}
+}
+@book{cribb2013historical,
+  author    = {Robert Cribb},
+  title     = {Historical Atlas of Indonesia},
+  year      = {2013},
+  publisher = {Routledge},
+  isbn      = {9781136780578}
+}
+@book{kemdikbud2017sejarahXI,
+  author    = {Kementerian Pendidikan dan Kebudayaan},
+  title     = {Sejarah Indonesia},
+  edition   = {Edisi Revisi},
+  year      = {2017},
+  publisher = {Kementerian Pendidikan dan Kebudayaan},
+  address   = {Jakarta},
+  isbn      = {978-602-427-124-4},
+  note      = {Untuk SMA/MA/SMK/MAK Kelas XI Semester 1. Penelaah: Sardiman AM, Amurwani Dwi Lestariningsih. Pereview: Abdul Rojak.},
+  pages     = {256},
+  series    = {Jilid 2a},
+  keywords  = {Indonesia, sejarah, pendidikan},
+  url       = {https://static.buku.kemdikbud.go.id/content/pdf/bukuteks/k13/bukusiswa/Sejarah%20Sm1%20Kelas%20XI%20BS%20press.pdf}
+}
+@book{kemdikbud2017sejarahX,
+  author    = {Kementerian Pendidikan dan Kebudayaan},
+  title     = {Sejarah Indonesia},
+  edition   = {Edisi Revisi},
+  year      = {2017},
+  publisher = {Kementerian Pendidikan dan Kebudayaan},
+  address   = {Jakarta},
+  isbn      = {978-602-427-123-7},
+  note      = {Untuk SMA/MA/SMK/MAK Kelas X. Penelaah: Restu Gunawan, Amurwani Dwi Lestariningsih, Sardiman. Pereview: Mohammad Iskandar, Hariyono, Mumuh Muhsin Z., Baha’ Uddin. Penyelia Penerbitan: Pusat Kurikulum dan Perbukuan, Balitbang, Kemendikbud.},
+  pages     = {280},
+  series    = {Jilid 1},
+  keywords  = {Indonesia, sejarah, pendidikan},
+  url       = {https://static.buku.kemdikbud.go.id/content/pdf/bukuteks/k13/bukusiswa/Kelas%20X%20Sejarah%20BS%20press.pdf}
+}
+@book{safitry2021sejarah,
+  author    = {Martina Safitry and Indah Wahyu Puji Utami and Zein Ilyas},
+  title     = {Sejarah untuk SMA/SMK Kelas XI},
+  year      = {2021},
+  publisher = {Pusat Perbukuan, Badan Standar, Kurikulum, dan Asesmen Pendidikan, Kementerian Pendidikan, Kebudayaan, Riset, dan Teknologi},
+  address   = {Jakarta Selatan},
+  isbn      = {978-602-244-859-4},
+  note      = {Cetakan pertama, 2021. Penelaah: Purnawan Basundoro, Sumardiansyah Perdana Kusuma. Penyelia: Supriyatno, E. Oos M. Anwas, Helga Kurnia, Maharani Prananingrum. Ilustrator: M. Rizal Abdi. Penyunting: Nur Janti. Penata Letak: Erwin},
+  pages     = {208},
+  url       = {https://static.buku.kemdikbud.go.id/content/pdf/bukuteks/kurikulum21/Sejarah-BS-KLS-XI.pdf}
+}
+@book{handoyo2021geografi,
+  author    = {Budi Handoyo},
+  title     = {Geografi untuk SMA Kelas XI},
+  year      = {2021},
+  publisher = {Pusat Perbukuan, Badan Standar, Kurikulum, dan Asesmen Pendidikan, Kementerian Pendidikan, Kebudayaan, Riset, dan Teknologi},
+  address   = {Jakarta},
+  isbn      = {978-602-244-846-4},
+  pages     = {234},
+  note      = {Penelaah: Ode Sofyan, Hardi Wangsa Jaya. Penyelia: Supriyatno E., Oos M. Anwas, Arifah Dinda Lestari. Ilustrator: Fatoni Budi Darmojo. Penyunting: Legina Aditya. Penata Letak: Hasbi Yusuf.},
+  url       = {https://static.buku.kemdikbud.go.id/content/pdf/bukuteks/kurikulum21/Geografi-BS-KLS-XI.pdf}
+}
+@misc{klook2023pemandangan,
+  author    = {{Klook Indonesia}},
+  title     = {20 Tempat Wisata dengan Pemandangan Alam Terindah di Indonesia},
+  year      = {2023},
+  url       = {https://www.klook.com/id/blog/pemandangan-alam-indonesia/},
+  note      = {Accessed: 2025-05-13},
+  organization = {Klook}
+}
